# deepin-settings-daemon

./: .gitignore  DEBUG  Makefile.am  Makefile.in  README  README.migrate  README.xrandr  aclocal.m4  autogen.sh  config.h  config.h.in  config.status  configure  configure.ac  libtool
data/: Makefile.am  Makefile.in  com.deepin.settings-daemon.plugins.background.gschema.xml.in.in  com.deepin.settings-daemon.plugins.helloworld.gschema.xml.in.in  com.linuxdeepin.settings-daemon.plugins.helloworld.gschema.xml.in.in  gnome-settings-daemon-uninstalled.pc  gnome-settings-daemon.convert  gnome-settings-daemon.desktop  gnome-settings-daemon.desktop.in  gnome-settings-daemon.desktop.in.in  gnome-settings-daemon.pc  org.gnome.settings-daemon.peripherals.gschema.xml.in  org.gnome.settings-daemon.peripherals.gschema.xml.in.in  org.gnome.settings-daemon.peripherals.touchpad.gschema.xml.in.in  org.gnome.settings-daemon.peripherals.trackpoint.gschema.xml.in.in  org.gnome.settings-daemon.peripherals.wacom.gschema.xml.in  org.gnome.settings-daemon.plugins.color.gschema.xml.in  org.gnome.settings-daemon.plugins.gschema.xml.in  org.gnome.settings-daemon.plugins.gschema.xml.in.in  org.gnome.settings-daemon.plugins.housekeeping.gschema.xml.in  org.gnome.settings-daemon.plugins.idle-delay.gschema.xml.in.in  org.gnome.settings-daemon.plugins.key-bindings.gschema.xml.in  org.gnome.settings-daemon.plugins.key-bindings.gschema.xml.in.in  org.gnome.settings-daemon.plugins.keyboard.gschema.xml.in  org.gnome.settings-daemon.plugins.keyboard.gschema.xml.in.in  org.gnome.settings-daemon.plugins.media-keys.gschema.xml.in  org.gnome.settings-daemon.plugins.media-keys.gschema.xml.in.in  org.gnome.settings-daemon.plugins.orientation.gschema.xml.in  org.gnome.settings-daemon.plugins.power.gschema.xml.in  org.gnome.settings-daemon.plugins.power.gschema.xml.in.in  org.gnome.settings-daemon.plugins.print-notifications.gschema.xml.in  org.gnome.settings-daemon.plugins.updates.gschema.xml.in  org.gnome.settings-daemon.plugins.xrandr.gschema.xml.in  (+2 more)
plugins/: Makefile.am  Makefile.in
plugins/a11y-keyboard/: Makefile.am  Makefile.in  gsd-a11y-keyboard-manager.c  gsd-a11y-preferences-dialog.c
plugins/a11y-settings/: Makefile.in
plugins/automount/: Makefile.in
plugins/background/: Makefile.am  Makefile.in  README  TODO  background.gnome-settings-plugin.in  background_helper.c  background_util.c  background_util.h  gaussianiir2d.c  gaussianiir2d.h  gsd-background-manager-private.h  gsd-background-manager.c  gsd-background-plugin.c
plugins/clipboard/: Makefile.in
plugins/color/: Makefile.in
plugins/common/: Makefile.am  Makefile.in  deepin-xrandr-helper.c  deepin-xrandr-helper.h  gsd-input-helper.c  gsd-keygrab.c  gsd-keygrab.h
plugins/cursor/: Makefile.in
plugins/datetime/: gsd-datetime-mechanism-main.c  gsd-datetime-mechanism.c  gsd-datetime-mechanism.h  org.gnome.settingsdaemon.datetimemechanism.policy.in
plugins/dummy/: Makefile.am  Makefile.in  dummy.gnome-settings-plugin  test-dummy.c
plugins/gconf/: conf-watcher.c
plugins/helloworld/: Makefile.am  gsd-helloworld-manager.c  gsd-helloworld-manager.h  gsd-helloworld-plugin.c  gsd-helloworld-plugin.h  helloworld.gnome-settings-plugin  helloworld.gnome-settings-plugin.in
plugins/housekeeping/: Makefile.in  gsd-cleanup-background-cache.c
plugins/idle-delay/: Makefile.am  README  gsd-idle-delay-dbus.h  gsd-idle-delay-manager.c  gsd-idle-delay-manager.h  gsd-idle-delay-misc.h  gsd-idle-delay-plugin.c  gsd-idle-delay-plugin.h  gsd-idle-delay-watcher.c  gsd-idle-delay-watcher.h  idle-delay.gnome-settings-plugin.in  test-idle-delay.c
plugins/idledelay/: Makefile.am  gsd-idledelay-manager.c  gsd-idledelay-manager.h  gsd-idledelay-plugin.c  gsd-idledelay-plugin.h  idledelay.gnome-settings-plugin.in
plugins/key-bindings/: Makefile.am  gsd-key-bindings-custom.c  gsd-key-bindings-custom.h  gsd-key-bindings-handler.c  gsd-key-bindings-handler.h  gsd-key-bindings-manager.c  gsd-key-bindings-manager.h  gsd-key-bindings-plugin.c  gsd-key-bindings-plugin.h  gsd-key-bindings-settings.h  gsd-key-bindings-util.c  gsd-key-bindings-util.h  key-bindings.gnome-settings-plugin.in  keybinder.c  keybinder.h  parse-super.c  parse-super.h  test-key-bindings.c  test-keybinder.c
plugins/keyboard/: gsd-input-sources-switcher.c  gsd-keyboard-manager.c  test-keyboard.c
plugins/media-keys/: Makefile.am  Makefile.in  deepin_media_key.c  deepin_media_key.h  gsd-media-keys-manager.c  gsd-media-keys-plugin.c  gsd-media-keys-window.c  shortcuts-list.h  test-media-keys.c
plugins/media-keys/cut-n-paste/: Makefile.in
plugins/mouse/: Makefile.am  Makefile.in  TODO  gsd-common-misc.c  gsd-common-misc.h  gsd-device.c  gsd-device.h  gsd-locate-pointer.c  gsd-mm-device.c  gsd-mm-device.h  gsd-mm-mouse.c  gsd-mm-mouse.h  gsd-mm-touchpad.c  gsd-mm-touchpad.h  gsd-mm-trackpoint.c  gsd-mm-trackpoint.h  gsd-mouse-manager.c  gsd-mouse-manager.h  gsd-mouse.c  gsd-mouse.h  gsd-touchpad-synaptics.c  gsd-touchpad-synaptics.h  gsd-touchpad.c  gsd-touchpad.h  gsd-trackpoint.c  gsd-trackpoint.h  mouse.gnome-settings-plugin.in
plugins/orientation/: Makefile.in
plugins/power/: Makefile.am  Makefile.in  deepin_power.c  deepin_power.h  gsd-backlight-helper.c  gsd-power-manager.c  gsd-power-movie.c  gsd-power-movie.h  gsd-reset-power.c  gsd-reset-power.h
plugins/print-notifications/: Makefile.in  gsd-print-notifications-manager.c  gsd-print-notifications-plugin.c
plugins/remote-display/: gsd-remote-display-manager.c
plugins/smartcard/: Makefile.in  gsd-smartcard-plugin.c
plugins/sound/: Makefile.in
plugins/updates/: Makefile.in  gsd-updates-refresh.h
plugins/wacom/: Makefile.in  gsd-wacom-manager.c
plugins/xrandr/: Makefile.am  Makefile.in  deepin_xrandr.c  deepin_xrandr.h  gsd-xrandr-manager.c  gsd-xrandr-manager.h  xrandr.c  xrandr.gnome-settings-plugin.in  xrandr.h
plugins/xrandr/doc/: XRANDR
plugins/xrandr/example/: SConstruct  hello_inotify.c  hello_netlink.c  hello_xevent.c
plugins/xsettings/: Makefile.in  fontconfig-monitor.c  gsd-xsettings-manager.c  xsettings-manager.c
(+12 files in other folders)
